--- a/Pages/homework comparisons.html
+++ b/Pages/homework comparisons.html
@@ -23,7 +23,7 @@
 
 <body>
 
-  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
     <a class="navbar-brand" id="latitude" href="../index.html">Latitude</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,7 +67,7 @@
         <br>
 
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-12 col-sm-6 col-md-6">
             <h4 class="visualizations" style="text-align: center">vs. Max Temperature</h4>
             <div class="thumbnail">
               <a href="homework viz 1.html">
@@ -75,7 +75,7 @@
               </a>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-12 col-sm-6 col-md-6">
             <h4 class="visualizations" style="text-align: center">vs. Humidity</h4>
             <div class="thumbnail">
               <a href="homework viz 2.html">
@@ -88,7 +88,7 @@
         <br>
 
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-12 col-sm-6 col-md-6">
             <h4 class="visualizations" style="text-align: center">vs. Cloudiness</h4>
             <div class="thumbnail">
               <a href="homework viz 3.html">
@@ -96,7 +96,7 @@
               </a>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-12 col-sm-6 col-md-6">
             <h4 class="visualizations" style="text-align: center">vs. Wind Speed</h4>
             <div class="thumbnail">
               <a href="homework viz 4.html">
