--- a/Pages/homework data.html
+++ b/Pages/homework data.html
@@ -23,7 +23,7 @@
 
 <body>
 
-  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
     <a class="navbar-brand" id="latitude" href="../index.html">Latitude</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
