--- a/Pages/homework viz 1.html
+++ b/Pages/homework viz 1.html
@@ -23,7 +23,7 @@
 
 <body>
 
-  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
     <a class="navbar-brand" id="latitude" href="../index.html">Latitude</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,14 +86,14 @@
         </h2>
 
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-12 col-sm-6 col-md-6">
             <div class="thumbnail vizbox">
               <a href="homework viz 1.html">
                 <img src="../Resources/assets/images/Fig1.png" alt="Max Temperature" class="img-thumbnail" />
               </a>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-12 col-sm-6 col-md-6">
             <div class="thumbnail">
               <a href="homework viz 2.html">
                 <img src="../Resources/assets/images/Fig2.png" alt="Humidity" class="img-thumbnail">
@@ -103,14 +103,14 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-12 col-sm-6 col-md-6">
             <div class="thumbnail">
               <a href="homework viz 3.html">
                 <img src="../Resources/assets/images/Fig3.png" alt="Cloudiness" class="img-thumbnail" />
               </a>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-12 col-sm-6 col-md-6">
             <div class="thumbnail">
               <a href="homework viz 4.html">
                 <img src="../Resources/assets/images/Fig4.png" alt="Wind Speed" class="img-thumbnail">
