on Data page, added table-responsive

--- a/Pages/homework data.html
+++ b/Pages/homework data.html
@@ -64,8 +64,8 @@
         <h6 class="pagetext">
           The table below contains all the data used for plotting.
         </h6>
-        <div>
-          <table class="table table-bordered table-hover table-condensed">
+        <div class="table-responsive">
+          <table class="table table-bordered table-hover table-sm">
             <thead>
               <tr>
                 <th title="Field #1">City_ID</th>
