made the large image clickable

--- a/Pages/homework viz 2.html
+++ b/Pages/homework viz 2.html
@@ -63,7 +63,9 @@
         </h1>
 
         <div>
-          <img src="../Resources/assets/images/Fig2.png" alt="Humidity" class="scale-down" style="width:100%">
+          <a href="../Resources/assets/images/Fig2.png">
+            <img src="../Resources/assets/images/Fig2.png" alt="Humidity" class="scale-down" style="width:100%">
+          </a>
         </div>
 
         <h6 class="pagetext">
