--- a/Pages/homework viz 1.html
+++ b/Pages/homework viz 1.html
@@ -63,7 +63,9 @@
         </h1>
 
         <div>
-          <img src="../Resources/assets/images/Fig1.png" alt="Max Temperature" class="scale-down" style="width:100%">
+          <a href="../Resources/assets/images/Fig1.png">
+            <img src="../Resources/assets/images/Fig1.png" alt="Max Temperature" class="scale-down" style="width:100%">
+          </a>
         </div>
 
         <h6 class="pagetext">
