--- a/Pages/homework viz 1.html
+++ b/Pages/homework viz 1.html
@@ -69,15 +69,13 @@
         </div>
 
         <h6 class="pagetext">
-          Latitude and max temperature lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada
-          consequat dolor, nec porttitor neque fringilla vitae. Quisque lacinia tortor vel massa blandit tincidunt. Sed
-          ornare augue nec consectetur iaculis. Vivamus vulputate ultricies dignissim. Integer vehicula quis massa at
-          finibus. Ut blandit massa ante, sed viverra felis mollis ut. Donec venenatis nec ex sed ornare. Nunc mollis
-          urna vel ornare faucibus. Phasellus ornare lectus auctor risus gravida, et ornare tellus malesuada. Sed
-          interdum a mauris quis sodales. Maecenas quis accumsan urna, ut blandit nunc. Nulla mattis ante quam, et
-          luctus lectus tincidunt condimentum. Nunc ornare ipsum ut ligula maximus, a placerat augue efficitur. Nulla
-          semper vel velit ac imperdiet. Nullam euismod erat at laoreet pulvinar. Cras ut malesuada magna, et
-          ullamcorper dolor.
+          This scatter plot of max temperature shows the expected effect of the seasons, despite not knowing what time
+          of day this data was pulled. The coldest data point in the
+          South was between 40 and 60 degrees from the Equator. That temperature was seen in the North between 30 and 50
+          degrees from the Equator. The warmest points were found in the Southern Hemisphere, where they were obviously
+          experiencing Summer. And the coldest points were in the Northern Hemisphere, even if we exclude any points
+          further than 60N (seeing as we have no Southern data points that are such a long distance from the Equator).
+
         </h6>
       </article>
 
