--- a/Pages/homework viz 2.html
+++ b/Pages/homework viz 2.html
@@ -69,15 +69,12 @@
         </div>
 
         <h6 class="pagetext">
-          Latitude and max temperature lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada
-          consequat dolor, nec porttitor neque fringilla vitae. Quisque lacinia tortor vel massa blandit tincidunt. Sed
-          ornare augue nec consectetur iaculis. Vivamus vulputate ultricies dignissim. Integer vehicula quis massa at
-          finibus. Ut blandit massa ante, sed viverra felis mollis ut. Donec venenatis nec ex sed ornare. Nunc mollis
-          urna vel ornare faucibus. Phasellus ornare lectus auctor risus gravida, et ornare tellus malesuada. Sed
-          interdum a mauris quis sodales. Maecenas quis accumsan urna, ut blandit nunc. Nulla mattis ante quam, et
-          luctus lectus tincidunt condimentum. Nunc ornare ipsum ut ligula maximus, a placerat augue efficitur. Nulla
-          semper vel velit ac imperdiet. Nullam euismod erat at laoreet pulvinar. Cras ut malesuada magna, et
-          ullamcorper dolor.
+          The humidity reported by OpenWeatherMap is Relative Humidity (RH), not absolute. It should be kept in mind
+          that in general, relative humidity increases in the Summer and increases the perceived temperature to people.
+          This plot shows more spread of RH in the northern latitudes, and a less dense line of data points at 100% than
+          southern latitudes. While it might seem significant that there are data points at 0% humidity in the Northern
+          Hemisphere, we should also note that there are no datapoints in the South that mirror such a long distance
+          from the Equator.
         </h6>
       </article>
 
