--- a/Pages/homework viz 3.html
+++ b/Pages/homework viz 3.html
@@ -69,14 +69,8 @@
         </div>
 
         <h6 class="pagetext">
-          Latitude and cloudiness lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada consequat
-          dolor, nec porttitor neque fringilla vitae. Quisque lacinia tortor vel massa blandit tincidunt. Sed ornare
-          augue nec consectetur iaculis. Vivamus vulputate ultricies dignissim. Integer vehicula quis massa at finibus.
-          Ut blandit massa ante, sed viverra felis mollis ut. Donec venenatis nec ex sed ornare. Nunc mollis urna vel
-          ornare faucibus. Phasellus ornare lectus auctor risus gravida, et ornare tellus malesuada. Sed interdum a
-          mauris quis sodales. Maecenas quis accumsan urna, ut blandit nunc. Nulla mattis ante quam, et luctus lectus
-          tincidunt condimentum. Nunc ornare ipsum ut ligula maximus, a placerat augue efficitur. Nulla semper vel velit
-          ac imperdiet. Nullam euismod erat at laoreet pulvinar. Cras ut malesuada magna, et ullamcorper dolor.
+          Latitude and cloudiness appear to have little to no correlation. Instinctively, one would assume this is
+          because clouds, like wind, are highly influenced by terrain and air currents.
         </h6>
       </article>
 
