--- a/index.html
+++ b/index.html
@@ -62,14 +62,21 @@
           Latitude in Relation to Weather
         </h1>
         <h6 class="pagetext">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada consequat dolor, nec porttitor neque
-          fringilla vitae. Quisque lacinia tortor vel massa blandit tincidunt. Sed ornare augue nec consectetur iaculis.
-          Vivamus vulputate ultricies dignissim. Integer vehicula quis massa at finibus. Ut blandit massa ante, sed
-          viverra felis mollis ut. Donec venenatis nec ex sed ornare. Nunc mollis urna vel ornare faucibus. Phasellus
-          ornare lectus auctor risus gravida, et ornare tellus malesuada. Sed interdum a mauris quis sodales. Maecenas
-          quis accumsan urna, ut blandit nunc. Nulla mattis ante quam, et luctus lectus tincidunt condimentum. Nunc
-          ornare ipsum ut ligula maximus, a placerat augue efficitur. Nulla semper vel velit ac imperdiet. Nullam
-          euismod erat at laoreet pulvinar. Cras ut malesuada magna, et ullamcorper dolor.
+          In this project, during the API section of our course, we made a Python script to pull a few different aspects
+          of the weather in more than 500 cities all over the world. We used the OpenWeatherMap API to get all the data,
+          which can be seen on the <a href="Pages/homework data.html">Data</a> page. Then we built scatter plots, with
+          latitude as the x-axis to easily visualize the weather in relation to location.
+          Select a visualization to see more, or go to the <a href="Pages/homework comparisons.html">Comparison</a> page
+          to see all four plots at once.
+          <br><br>
+          Data was collected on Jan 5th, 2017. This means the Northern Hemisphere was in Winter, and the Southern
+          Hemisphere was in Summer. Also, it is important to keep in mind that there is more habitable land in the
+          Northern Hemisphere, so there will be more data points north of the Equator, and there will also be points in
+          the North that are closer to the pole, than in the South.
+          <br><br>
+          Finally, remember that half the world is in day when this data is pulled and we did not choose cities with a
+          balance of longitudes.
+
         </h6>
       </article>
 
